syntax = "proto3";

package libp2p_openraft_rocksdb;

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  bool found = 1;
  string value = 2;
}

message SetValueRequest {
  string key = 1;
  string value = 2;
}

message SetValueResponse {
  bool ok = 1;
  string value = 2;
}

message UpdateValueRequest {
  string key = 1;
  string value = 2;
}

message UpdateValueResponse {
  bool ok = 1;
  string value = 2;
}

message DeleteValueRequest {
  string key = 1;
}

message DeleteValueResponse {
  bool ok = 1;
}

message ErrorResponse {
  string message = 1;
}

message RaftKvRequest {
  oneof op {
    GetValueRequest get = 1;
    SetValueRequest set = 2;
    UpdateValueRequest update = 3;
    DeleteValueRequest delete = 4;
  }
}

message RaftKvResponse {
  oneof op {
    GetValueResponse get = 1;
    SetValueResponse set = 2;
    UpdateValueResponse update = 3;
    DeleteValueResponse delete = 4;
    ErrorResponse error = 10;
  }
}
